--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=/home/waziri/Android/Sdk
-flutter.sdk=/home/waziri/snap/flutter/common/flutter
+sdk.dir=C:\\Users\\SHEYLAAH\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\flutter_windows_3.10.6-stable\\flutter
