--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
   assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+      - assets/images/logoo1.png
       - assets/images/download.png
       - assets/images/apple.png
       - assets/images/facebook.jpg
