--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
       - assets/images/download.png
       - assets/images/apple.png
       - assets/images/facebook.jpg
+      - assets/images/logooz.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
