--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
       - assets/images/apple.png
       - assets/images/facebook.jpg
       - assets/images/crdb.jpg
+      - assets/images/tra.jpg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
