--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,14 +64,7 @@ flutter:
   assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-      - assets/images/download.png
-      - assets/images/apple.png
-      - assets/images/facebook.jpg
-<<<<<<< Updated upstream
-=======
-      - assets/images/crdb.jpg
-      - assets/images/logooz.png
->>>>>>> Stashed changes
+      - assets/images/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
